# stagent

./: .gitignore  AGENTS.md  CLAUDE.md  FLOW.md  LICENSE  MEMORY.md  README.md  clr-dev.sh  drizzle.config.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.e2e.ts  vitest.config.ts
design-system/: MASTER.md  tokens.json  validate-tokens.ts
docs/: .last-generated  getting-started.md  index.md  manifest.json
features/: accessibility.md  agent-document-context.md  agent-integration.md  agent-profile-catalog.md  agent-profile-from-environment.md  agent-self-improvement.md  ai-assist-workflow-creation.md  ambient-approval-toast.md  app-shell.md  autonomous-loop-execution.md  board-context-persistence.md  changelog.md  chat-api-routes.md  chat-data-layer.md  chat-engine.md  chat-input-composer.md  chat-message-rendering.md  chat-ui-shell.md  cli-bootstrap.md  command-palette-enhancement.md  content-handling.md  cost-and-usage-dashboard.md  cross-project-comparison.md  cross-provider-profile-compatibility.md  database-schema.md  detail-view-redesign.md  document-manager.md  document-output-generation.md  document-preprocessing.md  e2e-test-automation.md  environment-cache.md  environment-dashboard.md  environment-health-scoring.md  environment-scanner.md  environment-sync-engine.md  environment-templates.md  file-attachment-data-layer.md  (+37 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/shell/: index.html  loading.css  loading.js
src-tauri/src/: main.rs
(+663 files in other folders)
