[package]
name = "stagent-desktop"
version = "0.1.1"
description = "Desktop wrapper for the Stagent local-first AI workspace."
edition = "2021"
publish = false
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
